# overlap

./: .clang-format  .cmake-format.py  .cmake-format.yaml  .gitmodules  .pre-commit-config.yaml  .travis.yml  CITATION.cff  CMakeLists.txt  LICENSE  README  README.md  overlap.hpp  pyproject.toml  setup.cfg  setup.py  sonar-project.properties
.github/: dependabot.yml  renovate.json
.github/scripts/: convert-precommit-tags.py
.github/workflows/: benchmarks.yaml  benchmarks.yml  build.yaml  ci.yaml  coverage.yaml  cpp.yaml  find-pr.yaml  pre-commit.yaml  process_benchmarks.yaml  python.yaml  renovate-pre-commit-conversion.yaml  run_benchmarks.yaml  sonarcloud.yaml  style.yaml  wheels.yaml  wheels_trigger.yaml
benchmarks/: CMakeLists.txt  common.hpp  details.cpp  hex_overlap.cpp  tet_overlap.cpp
benchmarks/cpp/: CMakeLists.txt  common.hpp  details.cpp  hex_overlap.cpp  hex_overlap_volume.cpp  tet_overlap.cpp
benchmarks/python/: benchmark_overlap_volume.py  benchmark_overlap_volume_random.py  run_benchmarks.py
include/overlap/: overlap.hpp
python/: CMakeLists.txt  __init__.py  overlap.cpp
python/overlap/: CMakeLists.txt  __init__.py  overlap.cpp
test/: CMakeLists.txt  common.hpp  decompose_elements.cpp  detail_clamp.cpp  detail_regularizedWedge.cpp  detail_regularizedWedgeArea.cpp  elements.cpp  normal_newell.cpp  polygon.cpp  regularized_wedge.cpp  sphere.cpp  sphere_element_area_edgecases.cpp  sphere_element_overlap.cpp  sphere_element_overlap_edgecases.cpp  sphere_hex_area.cpp  sphere_tet_area.cpp  sphere_tet_overlap_edgecases.cpp  test_overlap.py
tests/python/: test_overlap.py
tests/src/: CMakeLists.txt  common.hpp  test_clamp.cpp  test_contains.cpp  test_decompose_elements.cpp  test_detail_clamp.cpp  test_detail_regularizedWedge.cpp  test_detail_regularizedWedgeArea.cpp  test_detect_non_planar_faces.cpp  test_double_precision.cpp  test_elements.cpp  test_general_wedge.cpp  test_line_sphere_intersection.cpp  test_normal_newell.cpp  test_normalize_element.cpp  test_polygon.cpp  test_polyhedron.cpp  test_regularized_wedge.cpp  test_regularized_wedge_area.cpp  test_sphere.cpp  test_sphere_element_area_edgecases.cpp  test_sphere_element_overlap.cpp  test_sphere_element_overlap_edgecases.cpp  test_sphere_hex_area.cpp  test_sphere_tet_area.cpp  test_sphere_tet_overlap_edgecases.cpp  test_unit_sphere_intersections.cpp
