[metadata]
name = overlap
version = 0.1.0
author = Severin Strobl
author_email = git@severin-strobl.de
description = Exact calculation of the overlap volume and area of spheres and mesh elements
url = https://github.com/severinstrobl/overlap
long_description = file: README.md
long_description_content_type = text/markdown
keywords = computational-geometry, numerical-simulations, mesh-processing
license = GPLv3
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Topic :: Scientific/Engineering

[options]
python_requires = >= 3.6
install_requires =
    numpy
