[metadata]
name = overlap
version = 0.2.0-dev
description = Exact calculation of the overlap volume and area of spheres and mesh elements
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/severinstrobl/overlap
author = Severin Strobl
author_email = git@severin-strobl.de
license = MIT
license_files = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering
keywords = computational-geometry, numerical-simulations, mesh-processing

[options]
install_requires =
    numpy
python_requires = >=3.9
